[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric_cf"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}, {name="Ilya Baldin", email="ibaldin@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "Fabric Control Framework"
dynamic = ["version"]

keywords = ["Swagger", "Fabric Control Framework"]

requires-python = '>=3.9'
dependencies = [
    "requests>=2.28.1",
    "cryptography==3.3.2",
    "psycopg2-binary",
    "sqlalchemy",
    "waitress",
    "prometheus_client",
    "connexion",
    "swagger-ui-bundle",
    "fabric_fss_utils==1.4.0",
    "PyYAML",
    "fabric-message-bus==1.4.0",
    "fabric-fim==1.4.2"]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/ControlFramework"