[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fabric_cf"
authors = [{name="Komal Thareja", email="kthare10@renci.org"}, {name="Ilya Baldin", email="ibaldin@renci.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["Programming Language :: Python :: 3",
               "License :: OSI Approved :: MIT License",
               "Operating System :: OS Independent"]
description = "Fabric Control Framework"
dynamic = ["version"]

keywords = ["Swagger", "Fabric Control Framework"]

requires-python = '>=3.9'
dependencies = [
    "requests >= 2.28.1",
    "cryptography==43.0.3",
    "psycopg2-binary",
    "sqlalchemy",
    "waitress",
    "prometheus_client",
    "connexion==2.14.2",
    "swagger-ui-bundle==0.0.9",
    "PyYAML",
    "fabric_fss_utils==1.6.0",
    "fabric-message-bus==1.7.0",
    "fabric-fim==1.8.0",
    "fabric-credmgr-client==1.6.1",
    "ansible"
    ]

[project.optional-dependencies]
test = ["pytest",
        "flask_testing",
        "coverage>=4.0.3",
        "nose>=1.3.7",
        "pluggy>=0.3.1",
        "py>=1.4.31",
        "randomize>=0.13"
        ]

[project.urls]
Home = "https://fabric-testbed.net/"
Sources = "https://github.com/fabric-testbed/ControlFramework"

[tool.flit.module]
name = "fabric_cf"
